--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+.expo/
+npm-debug.*
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
+*.orig.*
+web-build/
+
+# macOS
+.DS_Store
+
 # Logs
 logs
 *.log
@@ -102,3 +115,6 @@ dist
 
 # TernJS port file
 .tern-port
+
+# IDEA Webstorm
+.idea
